fix: remove legacy downloads/summary UI to prevent duplication

--- a/public/index.html
+++ b/public/index.html
@@ -73,14 +73,7 @@
           <pre id="summaryOutputCard" class="summary-output"></pre>
         </div>
       </div>
-      <div class="downloads" id="downloads"></div>
-      <div class="summary-section" id="summarySection" style="display:none;">
-        <div class="summary-actions">
-          <button id="runSummary" class="secondary small" data-i18n="generateSummary">要約を生成</button>
-          <button id="copySummary" class="secondary small" data-i18n="copy" style="display:none;">コピー</button>
-        </div>
-        <pre id="summaryOutput" class="summary-output"></pre>
-      </div>
+      <!-- Old UI removed: downloads, summarySection (replaced by resultCard above) -->
       <div class="a2hs" id="a2hs">ホーム画面に追加してオフラインでも使えます</div>
     </footer>
   </div>
