feat: add pricing/legal/support links + form + analytics

--- a/static/index.html
+++ b/static/index.html
@@ -85,11 +85,15 @@
       <div class="a2hs" id="a2hs">ホーム画面に追加してオフラインでも使えます</div>
     </footer>
     <nav class="footer-nav">
-      <a href="/privacy.html" data-i18n="privacyPolicy">プライバシーポリシー</a>
+      <a href="/pricing.html" data-i18n="pricingPlan" data-legal-link="pricing" data-link-source="footer">料金・プラン</a>
       <span>·</span>
-      <a href="/terms.html" data-i18n="termsOfService">利用規約</a>
+      <a href="/privacy.html" data-i18n="privacyPolicy" data-legal-link="privacy" data-link-source="footer">プライバシーポリシー</a>
       <span>·</span>
-      <a href="mailto:lingoflow.cus@gmail.com" data-i18n="contact">お問い合わせ</a>
+      <a href="/terms.html" data-i18n="termsOfService" data-legal-link="terms" data-link-source="footer">利用規約</a>
+      <span>·</span>
+      <a href="mailto:lingoflow.cus@gmail.com" data-i18n="contact" data-contact-channel="email" data-link-source="footer">お問い合わせ</a>
+      <span>·</span>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSevSNsYZtukK-MYwuPyz07O0qCKWy_2GUL-fa0BinjLi5WwEQ/viewform?usp=header" target="_blank" rel="noopener noreferrer" data-i18n="contactForm" data-contact-channel="form" data-link-source="footer">お問い合わせフォーム</a>
     </nav>
   </div>
 
@@ -114,6 +118,17 @@
         <p class="company-note" data-i18n="companyNote">※ Stripeの請求先情報・解約は「サブスク管理」から行えます</p>
         <div class="company-actions-row">
           <button id="editCompanyBtn" class="cta small secondary" data-i18n="editCompany">会社情報を編集</button>
+        </div>
+      </section>
+      <section id="supportSection" class="support-section">
+        <h3 data-i18n="support">法務・サポート</h3>
+        <p class="support-note" data-i18n="contactResponseSla">通常3営業日以内に返信します。</p>
+        <div class="support-links">
+          <a href="/pricing.html" data-i18n="pricingPlan" data-legal-link="pricing" data-link-source="settings">料金・プラン</a>
+          <a href="/privacy.html" data-i18n="privacyPolicy" data-legal-link="privacy" data-link-source="settings">プライバシーポリシー</a>
+          <a href="/terms.html" data-i18n="termsOfService" data-legal-link="terms" data-link-source="settings">利用規約</a>
+          <a href="mailto:lingoflow.cus@gmail.com" data-i18n="contact" data-contact-channel="email" data-link-source="settings">お問い合わせ</a>
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSevSNsYZtukK-MYwuPyz07O0qCKWy_2GUL-fa0BinjLi5WwEQ/viewform?usp=header" target="_blank" rel="noopener noreferrer" data-i18n="contactForm" data-contact-channel="form" data-link-source="settings">お問い合わせフォーム</a>
         </div>
       </section>
       <hr class="settings-divider" />
