--- a/static/privacy.html
+++ b/static/privacy.html
@@ -58,11 +58,15 @@
 
     <h1>プライバシーポリシー / Privacy Policy</h1>
     <p class="last-updated">最終更新日: 2026年2月</p>
+    <p class="last-updated">※ 本ポリシーは公開ドラフトです。改定時は本ページの更新日を変更します。</p>
 
     <h2>1. 運営者</h2>
     <p>
       本サービスは、LingoFlow（個人運営）が提供しています。<br />
       お問い合わせ: <a href="mailto:lingoflow.cus@gmail.com">lingoflow.cus@gmail.com</a><br />
+      問い合わせフォーム:
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSevSNsYZtukK-MYwuPyz07O0qCKWy_2GUL-fa0BinjLi5WwEQ/viewform?usp=header" target="_blank" rel="noopener noreferrer">お問い合わせフォーム</a><br />
+      返信目安: 通常3営業日以内<br />
       その他の事業者情報は、ご請求に応じて遅滞なく開示いたします。
     </p>
 
@@ -145,7 +149,10 @@
     <h2>11. お問い合わせ</h2>
     <p>
       プライバシーに関するご質問は、以下までご連絡ください：<br />
-      <a href="mailto:lingoflow.cus@gmail.com">lingoflow.cus@gmail.com</a>
+      メール: <a href="mailto:lingoflow.cus@gmail.com">lingoflow.cus@gmail.com</a><br />
+      フォーム:
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSevSNsYZtukK-MYwuPyz07O0qCKWy_2GUL-fa0BinjLi5WwEQ/viewform?usp=header" target="_blank" rel="noopener noreferrer">お問い合わせフォーム</a><br />
+      返信目安: 通常3営業日以内
     </p>
 
     <h2>12. ポリシーの変更</h2>
