--- a/static/terms.html
+++ b/static/terms.html
@@ -58,11 +58,15 @@
 
     <h1>利用規約 / Terms of Service</h1>
     <p class="last-updated">最終更新日: 2026年2月</p>
+    <p class="last-updated">※ 本規約は公開ドラフトです。改定時は本ページの更新日を変更します。</p>
 
     <h2>1. 運営者</h2>
     <p>
       本規約は、LingoFlow（個人運営、以下「運営者」）が提供する Realtime Translator（以下「本サービス」）の利用条件を定めます。<br />
       お問い合わせ: <a href="mailto:lingoflow.cus@gmail.com">lingoflow.cus@gmail.com</a><br />
+      問い合わせフォーム:
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSevSNsYZtukK-MYwuPyz07O0qCKWy_2GUL-fa0BinjLi5WwEQ/viewform?usp=header" target="_blank" rel="noopener noreferrer">お問い合わせフォーム</a><br />
+      返信目安: 通常3営業日以内<br />
       その他の事業者情報は、ご請求に応じて遅滞なく開示いたします。
     </p>
 
@@ -83,7 +87,7 @@
     <h2>4. プラン</h2>
     <p>本サービスには以下のプランがあります：</p>
     <ul>
-      <li><strong>Free プラン</strong>: 月間30分、1日10分まで、7日間保持</li>
+      <li><strong>Free プラン</strong>: 月間20分、1日10分まで、7日間保持</li>
       <li><strong>Pro プラン</strong>: 月間120分、制限なし、30日間保持</li>
     </ul>
     <p>プランの内容・価格は予告なく変更される場合があります。</p>
@@ -143,7 +147,10 @@
     <h2>12. お問い合わせ</h2>
     <p>
       本規約に関するご質問は、以下までご連絡ください：<br />
-      <a href="mailto:lingoflow.cus@gmail.com">lingoflow.cus@gmail.com</a>
+      メール: <a href="mailto:lingoflow.cus@gmail.com">lingoflow.cus@gmail.com</a><br />
+      フォーム:
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSevSNsYZtukK-MYwuPyz07O0qCKWy_2GUL-fa0BinjLi5WwEQ/viewform?usp=header" target="_blank" rel="noopener noreferrer">お問い合わせフォーム</a><br />
+      返信目安: 通常3営業日以内
     </p>
 
     <hr style="margin: 2rem 0; border-color: rgba(255,255,255,0.1);" />
