chore: single-source pricing via generator (AUTO blocks)

--- a/static/index.html
+++ b/static/index.html
@@ -293,6 +293,7 @@
         <h2 data-i18n="ticketSelectTitle">追加チケットを選択</h2>
         <button id="ticketModalClose" class="modal-close-btn" aria-label="Close">✕</button>
       </header>
+      <!-- AUTO:INDEX_TICKET_PACKS:START -->
       <div class="ticket-grid">
         <button class="ticket-pack" data-pack-id="t120">
           <span class="ticket-minutes">+120分</span>
@@ -319,6 +320,7 @@
           <span class="ticket-price">¥21,000</span>
         </button>
       </div>
+      <!-- AUTO:INDEX_TICKET_PACKS:END -->
       <div id="ticketModalStatus" class="billing-status"></div>
     </div>
   </dialog>
