--- a/static/pricing.html
+++ b/static/pricing.html
@@ -86,6 +86,7 @@
         </tr>
       </thead>
       <tbody>
+        <!-- AUTO:PRICING_PLAN_ROWS:START -->
         <tr>
           <td>利用枠</td>
           <td>月間20分 / 1日10分</td>
@@ -101,10 +102,12 @@
           <td>7日</td>
           <td>30日</td>
         </tr>
+        <!-- AUTO:PRICING_PLAN_ROWS:END -->
       </tbody>
     </table>
 
     <h2>2. チケット価格（Pro限定）</h2>
+    <!-- AUTO:PRICING_TICKET_LIST:START -->
     <ul>
       <li>+120分: ¥1,440</li>
       <li>+240分: ¥2,440</li>
@@ -113,6 +116,7 @@
       <li>+1800分: ¥12,600</li>
       <li>+3000分: ¥21,000</li>
     </ul>
+    <!-- AUTO:PRICING_TICKET_LIST:END -->
     <p>価格は税込表示です。購入時点でアプリ内に表示される価格を優先します。</p>
 
     <h2>3. 返金・変更</h2>
