--- a/static/privacy.html
+++ b/static/privacy.html
@@ -95,10 +95,12 @@
     </ul>
 
     <h2>5. データの保持期間</h2>
+    <!-- AUTO:PRIVACY_RETENTION_LIST:START -->
     <ul>
       <li><strong>Free プラン</strong>: セッションデータは 7日間 保持後、自動削除</li>
       <li><strong>Pro プラン</strong>: セッションデータは 30日間 保持後、自動削除</li>
     </ul>
+    <!-- AUTO:PRIVACY_RETENTION_LIST:END -->
     <p>アカウントを削除した場合、関連するデータは速やかに削除されます。</p>
 
     <h2>6. 第三者への提供</h2>
