--- a/static/terms.html
+++ b/static/terms.html
@@ -86,10 +86,12 @@
 
     <h2>4. プラン</h2>
     <p>本サービスには以下のプランがあります：</p>
+    <!-- AUTO:TERMS_PLAN_LIST:START -->
     <ul>
       <li><strong>Free プラン</strong>: 月間20分、1日10分まで、7日間保持</li>
       <li><strong>Pro プラン</strong>: 月間120分、制限なし、30日間保持</li>
     </ul>
+    <!-- AUTO:TERMS_PLAN_LIST:END -->
     <p>プランの内容・価格は予告なく変更される場合があります。</p>
 
     <h2>5. 返金</h2>
