feat: unify legal nav + add home retention/refund summary

--- a/static/index.html
+++ b/static/index.html
@@ -84,16 +84,20 @@
       </div>
       <div class="a2hs" id="a2hs">ホーム画面に追加してオフラインでも使えます</div>
     </footer>
+    <div class="home-policy-summary">
+      <!-- AUTO:INDEX_PLAN_POLICY_SUMMARY:START -->
+      <p>保存期間: Free 7日 / Pro 30日</p>
+      <p>返金: 原則返金なし（<a href="/terms.html#refund-policy" data-legal-link="terms" data-link-source="home-policy">利用規約</a>をご確認ください）</p>
+      <!-- AUTO:INDEX_PLAN_POLICY_SUMMARY:END -->
+    </div>
     <nav class="footer-nav">
       <a href="/pricing.html" data-i18n="pricingPlan" data-legal-link="pricing" data-link-source="footer">料金・プラン</a>
       <span>·</span>
-      <a href="/privacy.html" data-i18n="privacyPolicy" data-legal-link="privacy" data-link-source="footer">プライバシーポリシー</a>
-      <span>·</span>
       <a href="/terms.html" data-i18n="termsOfService" data-legal-link="terms" data-link-source="footer">利用規約</a>
       <span>·</span>
-      <a href="mailto:lingoflow.cus@gmail.com" data-i18n="contact" data-contact-channel="email" data-link-source="footer">お問い合わせ</a>
+      <a href="/privacy.html" data-i18n="privacyPolicy" data-legal-link="privacy" data-link-source="footer">プライバシーポリシー</a>
       <span>·</span>
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSevSNsYZtukK-MYwuPyz07O0qCKWy_2GUL-fa0BinjLi5WwEQ/viewform?usp=header" target="_blank" rel="noopener noreferrer" data-i18n="contactForm" data-contact-channel="form" data-link-source="footer">お問い合わせフォーム</a>
+      <a href="mailto:lingoflow.cus@gmail.com" data-i18n="contact" data-contact-channel="email" data-link-source="footer">お問い合わせ</a>
     </nav>
   </div>
 
