--- a/static/pricing.html
+++ b/static/pricing.html
@@ -122,7 +122,9 @@
     <h2>3. 返金・変更</h2>
     <p>
       Pro料金およびチケット料金は、原則として返金対象外です。
-      ただし、サービス側の重大障害が確認された場合は個別に対応します。
+      返金条件の詳細は <a href="/terms.html#refund-policy">利用規約（返金）</a> をご確認ください。
+    </p>
+    <p>
       プラン内容・価格・チケット構成は予告なく変更される場合があります。
     </p>
 
@@ -141,10 +143,15 @@
     </p>
 
     <h2>6. 関連ページ</h2>
-    <ul>
-      <li><a href="/privacy.html">プライバシーポリシー</a></li>
-      <li><a href="/terms.html">利用規約</a></li>
-    </ul>
+    <nav class="footer-nav" aria-label="関連ページ">
+      <a href="/pricing.html">料金・プラン</a>
+      <span>·</span>
+      <a href="/terms.html">利用規約</a>
+      <span>·</span>
+      <a href="/privacy.html">プライバシーポリシー</a>
+      <span>·</span>
+      <a href="mailto:lingoflow.cus@gmail.com">お問い合わせ</a>
+    </nav>
 
     <hr style="margin: 2rem 0; border-color: rgba(255,255,255,0.1);" />
 
