--- a/static/privacy.html
+++ b/static/privacy.html
@@ -162,6 +162,16 @@
       本ポリシーは予告なく変更される場合があります。重要な変更がある場合は、本ページまたはアプリ内で通知します。
     </p>
 
+    <nav class="footer-nav" aria-label="関連ページ">
+      <a href="/pricing.html">料金・プラン</a>
+      <span>·</span>
+      <a href="/terms.html">利用規約</a>
+      <span>·</span>
+      <a href="/privacy.html">プライバシーポリシー</a>
+      <span>·</span>
+      <a href="mailto:lingoflow.cus@gmail.com">お問い合わせ</a>
+    </nav>
+
     <hr style="margin: 2rem 0; border-color: rgba(255,255,255,0.1);" />
 
     <p style="font-size: 0.875rem; color: var(--muted, #94a3b8);">
