--- a/static/terms.html
+++ b/static/terms.html
@@ -94,7 +94,7 @@
     <!-- AUTO:TERMS_PLAN_LIST:END -->
     <p>プランの内容・価格は予告なく変更される場合があります。</p>
 
-    <h2>5. 返金</h2>
+    <h2 id="refund-policy">5. 返金</h2>
     <p>
       Pro プランの料金は原則として返金いたしません。
       ただし、サービス側の重大な障害により利用できなかった場合は、
@@ -154,6 +154,16 @@
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSevSNsYZtukK-MYwuPyz07O0qCKWy_2GUL-fa0BinjLi5WwEQ/viewform?usp=header" target="_blank" rel="noopener noreferrer">お問い合わせフォーム</a><br />
       返信目安: 通常3営業日以内
     </p>
+
+    <nav class="footer-nav" aria-label="関連ページ">
+      <a href="/pricing.html">料金・プラン</a>
+      <span>·</span>
+      <a href="/terms.html">利用規約</a>
+      <span>·</span>
+      <a href="/privacy.html">プライバシーポリシー</a>
+      <span>·</span>
+      <a href="mailto:lingoflow.cus@gmail.com">お問い合わせ</a>
+    </nav>
 
     <hr style="margin: 2rem 0; border-color: rgba(255,255,255,0.1);" />
 
