--- a/static/pricing.html
+++ b/static/pricing.html
@@ -8,6 +8,14 @@
   <link rel="icon" href="/icon-192.png" />
   <link rel="stylesheet" href="/styles.css" />
   <meta name="theme-color" content="#0f172a" />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-39NFY1FDW9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-39NFY1FDW9', { send_page_view: true });
+  </script>
   <style>
     .legal-container {
       max-width: 860px;
